[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "hiredis>=3.4.0",
    "kazoo>=2.11.0",
    "psycopg[binary]>=3.3.4",
    "pybase62>=1.0.0",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
